fix accordion alignment

--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -43,7 +43,7 @@
 }
 
 .accordion-link i {
-  color: #e7d5ff;
+  color: #b3ff00;
   padding: .5rem;
 
 }
