--- a/src/views/home.css
+++ b/src/views/home.css
@@ -2104,7 +2104,6 @@ button.primary:hover span:after {
   justify-content: center;
   overflow: hidden;
   position: relative;
-  height: 100vh;
 }
 
 .home-accordion1 {
@@ -3496,27 +3495,18 @@ dialog p a:visited {
 
   .home-plan {
     width: 100%;
-    padding-top: var(--dl-space-space-fourunits);
-    padding-left: var(--dl-space-space-oneandhalfunits);
-    padding-right: var(--dl-space-space-oneandhalfunits);
-    padding-bottom: var(--dl-space-space-fourunits);
+
   }
 
   .home-plan1 {
     width: 100%;
-    padding-top: var(--dl-space-space-fourunits);
-    padding-left: var(--dl-space-space-oneandhalfunits);
-    padding-right: var(--dl-space-space-oneandhalfunits);
-    padding-bottom: var(--dl-space-space-fourunits);
+
   }
 
   .home-plan2 {
     width: 100%;
     height: 100%;
-    padding-top: var(--dl-space-space-fourunits);
-    padding-left: var(--dl-space-space-oneandhalfunits);
-    padding-right: var(--dl-space-space-oneandhalfunits);
-    padding-bottom: var(--dl-space-space-fourunits);
+
   }
 
   .home-plans1 {
@@ -3526,10 +3516,7 @@ dialog p a:visited {
   .home-plan3 {
     width: 100%;
     height: 100%;
-    padding-top: var(--dl-space-space-fourunits);
-    padding-left: var(--dl-space-space-oneandhalfunits);
-    padding-right: var(--dl-space-space-oneandhalfunits);
-    padding-bottom: var(--dl-space-space-fourunits);
+
   }
 
   .home-buy3 {
@@ -3539,19 +3526,13 @@ dialog p a:visited {
   .home-plan4 {
     width: 100%;
     height: 100%;
-    padding-top: var(--dl-space-space-fourunits);
-    padding-left: var(--dl-space-space-oneandhalfunits);
-    padding-right: var(--dl-space-space-oneandhalfunits);
-    padding-bottom: var(--dl-space-space-fourunits);
+
   }
 
   .home-plan {
     width: 100%;
     height: 100%;
-    padding-top: var(--dl-space-space-fourunits);
-    padding-left: var(--dl-space-space-oneandhalfunits);
-    padding-right: var(--dl-space-space-oneandhalfunits);
-    padding-bottom: var(--dl-space-space-fourunits);
+
   }
 
   .home-help {
@@ -4285,8 +4266,7 @@ dialog p a:visited {
   }
 
   .home-plan {
-    width: auto;
-    width: auto;
+
   }
 
   .home-plan0 {
